Issues acabat, falta provar la logica i revisar swagger
